Overrode Contrast Issues

--- a/static/css/homepage.css
+++ b/static/css/homepage.css
@@ -13,7 +13,7 @@
 }
 
 .home-page .home-card a {
-    color: #007bff !important;
+    color: #70b5ff !important;
 }
 
 .home-page .home-card a:hover {
